# elasticsearch-django

./: .coveragerc  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pylintrc  .ruff.toml  .travis.yml  CHANGELOG.md  LICENCE  LICENSE  MANIFEST.in  Pipfile  README  README.md  README.rst  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  settings.py  setup.py  tox.ini  urls.py
.github/workflows/: tox.yml
elasticsearch_django/: README.md  __init__.py  admin.py  api.py  apps.py  compat.py  context_manager.py  context_managers.py  decorators.py  exceptions.py  index.py  models.py  settings.py  signals.py  utils.py
elasticsearch_django/db/: __init__.py  fields.py
elasticsearch_django/management/: __init__.py
elasticsearch_django/management/commands/: __init__.py  create_search_index.py  delete_search_index.py  prune_search_index.py  rebuild_search_index.py  update_search_index.py
elasticsearch_django/mappings/: README.md
elasticsearch_django/migrations/: 0001_initial.py  0002_searchquery_duration.py  0003_auto_20160926_2021.py  0004_auto_20161129_1135.py  0005_convert_JSONFields.py  0006_add_encoder_JSONField_kwarg.py  0007_update_json_field_encoders.py  0008_searchquery_search_terms.py  0008_searchquery_user_input.py  0009_searchquery_query_type.py  0010_searchquery_total_hits_relation.py  0011_searchquery_aggregations.py  0012_alter_searchquery_aggregations_and_more.py  __init__.py
elasticsearch_django/tests/: __init__.py  test_apps.py  test_commands.py  test_decorators.py  test_index_functions.py  test_migrations.py  test_models.py  test_settings.py  test_utils.py
mappings/: examples.json
test_app/: __init__.py  admin.py  apps.py  factories.py  models.py  settings.py  urls.py
test_app/migrations/: 0001_initial.py
tests/: __init__.py  admin.py  apps.py  models.py  settings.py  test_api.py  test_apps.py  test_commands.py  test_decorators.py  test_index_functions.py  test_migrations.py  test_models.py  test_settings.py  urls.py
tests/migrations/: 0001_initial.py  0002_examplemodel_user.py  0003_examplemodelwithcustomprimarykey.py  0004_modela_modelb.py
