[tool.poetry]
name = "elasticsearch-django"
version = "7.1.2"
description = "Elasticsearch Django app."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README.rst"
homepage = "https://github.com/yunojuno/elasticsearch-django"
repository = "https://github.com/yunojuno/elasticsearch-django"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django :: 3.0",
    "Framework :: Django :: 3.1",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0"
elasticsearch = "^7.0"
elasticsearch-dsl = "^7.0"
simplejson = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
pytest-django = "*"
coverage = "*"
pylint = "*"
flake8 = "*"
flake8-bandit = "*"
flake8-docstrings = "*"
isort = "*"
mypy = "*"
pre-commit = "*"
black = {version="*", allow-prereleases=true}
tox = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
